{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 39,
  "lineage": "0f0a6f89-3efb-de89-82ca-da2e3adb5410",
  "resources": [
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:377846699531:security-group/sg-0b99e8d71cdaed652",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b99e8d71cdaed652",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "highshow-image-platform-alb-sg",
            "name_prefix": "",
            "owner_id": "377846699531",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "highshow-image-platform-alb-sg"
            },
            "tags_all": {
              "Name": "highshow-image-platform-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0844d9332cafbafc7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:377846699531:security-group/sg-08c63c20ff723f0f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c63c20ff723f0f8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e039191a86610cde"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e039191a86610cde"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "highshow-image-platform-app-sg",
            "name_prefix": "",
            "owner_id": "377846699531",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "highshow-image-platform-app-sg"
            },
            "tags_all": {
              "Name": "highshow-image-platform-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0844d9332cafbafc7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.web",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:377846699531:security-group/sg-0e039191a86610cde",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e039191a86610cde",
            "ingress": [
              {
                "cidr_blocks": [
                  "80.46.99.146/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b99e8d71cdaed652"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "highshow-image-platform-web-sg",
            "name_prefix": "",
            "owner_id": "377846699531",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "highshow-image-platform-web-sg"
            },
            "tags_all": {
              "Name": "highshow-image-platform-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0844d9332cafbafc7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000c23bfea438bb39",
            "arn": "arn:aws:ec2:eu-west-2:377846699531:elastic-ip/eipalloc-000c23bfea438bb39",
            "association_id": "eipassoc-0ef2ade821314f6bd",
            "domain": "vpc",
            "id": "eipalloc-000c23bfea438bb39",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-05ea9e007e95b6cc1",
            "private_dns": "ip-10-0-1-155.eu-west-2.compute.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-13-41-215-218.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.215.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "highshow-image-platform-nat-eip"
            },
            "tags_all": {
              "Name": "highshow-image-platform-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:377846699531:internet-gateway/igw-0838669ab80038072",
            "id": "igw-0838669ab80038072",
            "owner_id": "377846699531",
            "tags": {
              "Name": "highshow-image-platform-igw"
            },
            "tags_all": {
              "Name": "highshow-image-platform-igw"
            },
            "vpc_id": "vpc-0844d9332cafbafc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000c23bfea438bb39",
            "association_id": "eipassoc-0ef2ade821314f6bd",
            "connectivity_type": "public",
            "id": "nat-04eac1c7824ad3360",
            "network_interface_id": "eni-05ea9e007e95b6cc1",
            "private_ip": "10.0.1.155",
            "public_ip": "13.41.215.218",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01b0169bb6ad54e7e",
            "tags": {
              "Name": "highshow-image-platform-nat"
            },
            "tags_all": {
              "Name": "highshow-image-platform-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:377846699531:route-table/rtb-0d48a3561c1ef2afd",
            "id": "rtb-0d48a3561c1ef2afd",
            "owner_id": "377846699531",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04eac1c7824ad3360",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "highshow-image-platform-private-rt"
            },
            "tags_all": {
              "Name": "highshow-image-platform-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0844d9332cafbafc7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:377846699531:route-table/rtb-04c2195027e29358f",
            "id": "rtb-04c2195027e29358f",
            "owner_id": "377846699531",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0838669ab80038072",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "highshow-image-platform-public-rt"
            },
            "tags_all": {
              "Name": "highshow-image-platform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0844d9332cafbafc7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfe3a75673f00c57",
            "route_table_id": "rtb-0d48a3561c1ef2afd",
            "subnet_id": "subnet-0a9f0ccdd67c6b450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_az1",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd07e2e01a222525",
            "route_table_id": "rtb-0d48a3561c1ef2afd",
            "subnet_id": "subnet-01dda57405ee66228"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_az2",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0143fff83adb9812a",
            "route_table_id": "rtb-04c2195027e29358f",
            "subnet_id": "subnet-01b0169bb6ad54e7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2d695e23d35faa1",
            "route_table_id": "rtb-04c2195027e29358f",
            "subnet_id": "subnet-0f3a0d4fdd707a720"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_az2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:377846699531:subnet/subnet-0a9f0ccdd67c6b450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9f0ccdd67c6b450",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "377846699531",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "highshow-image-platform-private-az1"
            },
            "tags_all": {
              "Name": "highshow-image-platform-private-az1"
            },
            "vpc_id": "vpc-0844d9332cafbafc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:377846699531:subnet/subnet-01dda57405ee66228",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dda57405ee66228",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "377846699531",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "highshow-image-platform-private-az2"
            },
            "tags_all": {
              "Name": "highshow-image-platform-private-az2"
            },
            "vpc_id": "vpc-0844d9332cafbafc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:377846699531:subnet/subnet-01b0169bb6ad54e7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b0169bb6ad54e7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "377846699531",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "highshow-image-platform-public-az1"
            },
            "tags_all": {
              "Name": "highshow-image-platform-public-az1"
            },
            "vpc_id": "vpc-0844d9332cafbafc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:377846699531:subnet/subnet-0f3a0d4fdd707a720",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3a0d4fdd707a720",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "377846699531",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "highshow-image-platform-public-az2"
            },
            "tags_all": {
              "Name": "highshow-image-platform-public-az2"
            },
            "vpc_id": "vpc-0844d9332cafbafc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:377846699531:vpc/vpc-0844d9332cafbafc7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0245415074e75e202",
            "default_route_table_id": "rtb-0adbb45d401f32990",
            "default_security_group_id": "sg-0729b19762561349c",
            "dhcp_options_id": "dopt-0520246ba276608bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0844d9332cafbafc7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0adbb45d401f32990",
            "owner_id": "377846699531",
            "tags": {
              "Name": "highshow-image-platform-vpc"
            },
            "tags_all": {
              "Name": "highshow-image-platform-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}